; ModuleID = '/home/carl/AnghaBench/h2o/lib/common/extr_memory.c_topagesize.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/common/extr_memory.c_topagesize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@h2o_buffer_t = common dso_local global i32 0, align 4
@_buf = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @topagesize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @topagesize(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %4 = call i64 (...) @getpagesize()
  store i64 %4, i64* %3, align 8
  %5 = load i32, i32* @h2o_buffer_t, align 4
  %6 = load i32, i32* @_buf, align 4
  %7 = call i64 @offsetof(i32 %5, i32 %6)
  %8 = load i64, i64* %2, align 8
  %9 = add i64 %7, %8
  %10 = load i64, i64* %3, align 8
  %11 = add i64 %9, %10
  %12 = sub i64 %11, 1
  %13 = load i64, i64* %3, align 8
  %14 = udiv i64 %12, %13
  %15 = load i64, i64* %3, align 8
  %16 = mul i64 %14, %15
  ret i64 %16
}

declare dso_local i64 @getpagesize(...) #1

declare dso_local i64 @offsetof(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
